# MLX-RFSN-main

./: .gitignore  =0.19  AGENTS.md  MANIFEST.in  README.md  RELEASE_MANIFEST.md  pyproject.toml  pytest.ini  release.toml
.agents/skills/MLX-RFSN-main/: SKILL.md
.agents/skills/MLX-RFSN-main/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: adapter-fix-and-benchmark-update.md  feature-development.md  server-feature-or-hardening.md
.claude/homunculus/instincts/inherited/: MLX-RFSN-main-instincts.yaml
.codex/: AGENTS.md
.devin/: config.local.json
.github/workflows/: ci.yml  fusion-alpha.yml
artifacts/bench/shootout/debug/: rfsn_v10_k8_v5_trace.json
artifacts/bench/shootout/full_logit/: results.csv  results.json  results.md
artifacts/bench/shootout/memory/: results.csv  results.json  results.md
artifacts/bench/shootout/promotion/: results.csv  results.json  results.md
artifacts/bench/shootout/quick/: results.csv  results.json  results.md
artifacts/winner/: integration_notes.md  winner.json  winner.md
benchmarks/: baseline_mlx.py  benchmark_generation_throughput.py  candidate_registry.py  judge.py  kv_shootout.py  memory_shootout.py  polar_kernel_bench.py  report_generator.py  run_a1.py  schemas.py  validate_generation_smoke.py  validate_long_context_kv.py  validate_qjl_attention_score.py  validate_real_model_kv.py
benchmarks/candidates/: a1_wht_grouped_k8v4_gs64.py  a1_wht_grouped_k8v5_gs64.py  a1b_wht_asym_k8v4.py  a3_wht_turboquant_mse_4bit.py  b1_sparsejl_grouped_k8v4_gs64.py  b1_sparsejl_grouped_k8v5_gs64.py  base_candidate.py  r1_wht_grouped_residual128.py  s1_snapkv_prune_only.py  s2_snapkv_plus_grouped.py
benchmarks/tests/: test_a1_attention_fidelity.py  test_a1_generation.py  test_a1_reconstruction.py
docs/: CANDIDATE_PROMOTION.md  FEATURE_FLAGS.md  README_REALITY.md  RELEASE_GATE.md  RUN_SERVER.md  benchmark_methodology.md  dev_setup.md  roadmap_alpha9.md  status.md
rfsn_v10/: _version.py  clickhouse_client.py  config.py  errors.py  kv_manager.py
rfsn_v10/benchmarks/: __init__.py  kv_shootout.py  packed_attention_bench.py
rfsn_v10/cache/: __init__.py  cartesian_codec.py  contracts.py  incremental_layer_cache.py  memory.py  mlx_packed_attention_reference.py  numpy_attention_oracle.py  numpy_codec_oracle.py  numpy_oracle.py  reference_attention.py  session.py
rfsn_v10/cache/tests/: test_cartesian_codec.py  test_contracts.py  test_corpus.py  test_identity.py  test_incremental_layer_cache.py  test_numpy_attention_oracle.py  test_numpy_codec_oracle.py  test_numpy_oracle.py  test_packaging.py  test_real_model_promotion.py  test_session.py
rfsn_v10/integrations/mlx_lm_adapter/: __init__.py  adapter.py  api.py  compatibility.py  generator.py
rfsn_v10/integrations/mlx_lm_adapter/tests/: test_adapter.py  test_compatibility.py
rfsn_v10/integrations/mlx_lm_model_support/: __init__.py  attention_wrapper.py
rfsn_v10/integrations/mlx_lm_model_support/tests/: test_attention_wrapper.py  test_model_support.py
rfsn_v10/kernels/: _metal_backend.py  cartesian_cpu_reference.py  metal_cartesian.py
rfsn_v10/kernels/metal/: cartesian_qk.metal  cartesian_qk_body.metal  cartesian_sv.metal  cartesian_sv_body.metal
rfsn_v10/kernels/tests/: test_cartesian_cpu_reference.py
rfsn_v10/runtime/: engine.py  generation.py
rfsn_v10/server/: app.py  cli.py
rfsn_v11/: config.py  model_loader.py  pyproject.toml
rfsn_v11/cache/: paged_allocator.py  prefix_cache.py  residual_cache.py
rfsn_v11/candidates/: __init__.py  artifact_utils.py  base.py  candidate_status.py  json_utils.py  logit_capture.py  memory_metrics.py  mlx_lm_baseline.py  mlx_lm_quantized.py  polar_reference_adapter.py  promotion_policy.py  quality_gates.py  rfsn_direct_packed_adapter.py  rfsn_v10_adapter.py  rfsn_v11_adapter.py  turbo_polar_adapter.py  turboquant_v2_adapter.py
rfsn_v11/generation/: cache_injection.py  turbo_polar_cache.py
rfsn_v11/integrations/: cache_policy.py
rfsn_v11/polar_fused/: __init__.py  attention.py  codebooks.py  config.py  incremental_cache.py  packing.py  quality_gates.py  telemetry.py
rfsn_v11/polar_fused/adapters/: mlx_lm.py
rfsn_v11/polar_fused/mlx_ops/: registry.py
rfsn_v11/polar_fused/tests/: test_config.py  test_end_to_end.py  test_quantize.py
rfsn_v11/runtime/: generation.py
rfsn_v11/server/: app.py
rfsn_v11/tests/: test_attention.py  test_metal_barrier.py  test_packing.py  test_server.py  test_value_quant.py  test_wht_grid.py
scripts/: check_release_integrity.py  clean_artifacts.py  make_release_zip.py  mlx_gate.sh  release_gate.py  release_gate.sh
scripts/diagnostics/: temporary_allocations.py
tests/: conftest.py  test_alembic_migrations.py  test_config_strict.py  test_generation.py  test_no_v11_import_from_v10.py  test_server_backend_errors.py
tests/benchmarks/: __init__.py  test_artifact_integrity.py  test_artifact_markdown_consistency.py  test_cache_policy_registry.py  test_candidate_registry.py  test_candidate_result_schema.py  test_no_stale_promotion.py  test_rfsn_v11_cache_injection_contract.py  test_teacher_forced_alignment.py  test_token_sequence_hash.py  test_turbo_polar_kernel_qk.py  test_turbo_polar_offline.py  test_turbo_polar_online_attention.py  test_turbo_polar_qjl.py
tests/runtime/: test_sparse_disabled_by_default.py
tests/server/: test_chat_completions.py  test_endpoints_real.py  test_request_limits.py  test_server_health.py
