[build-system]
requires = ["setuptools>=70.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-rfsn"
dynamic = ["version"]
description = "MLX-RFSN Fusion Alpha - Quantized KV-cache + sparse-attention runtime for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "RFSN Contributors"},
]
keywords = [
    "quantization",
    "kv-cache",
    "sparse-attention",
    "mlx",
    "apple-silicon",
    "llm",
    "inference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==1.26.4",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pydantic>=2.5",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
basic = []
fusion = [
    "mlx==0.21.1",
    "mlx-lm==0.20.6",
]
memory = [
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff==0.4.*",
    "mypy==1.8.*",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "build>=1.2",
]
# Legacy aliases for backward compatibility
mlx = [
    "mlx==0.21.1",
    "mlx-lm==0.20.6",
]
real_model = [
    "torch==2.3.1",
    "transformers>=4.38",
]
production = [
    "huggingface_hub>=0.20",
    "psutil>=5.9",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "mlx==0.21.1",
    "mlx-lm==0.20.6",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "pytest>=7.0,<9",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff==0.4.*",
    "mypy==1.8.*",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "build>=1.2",
    "torch==2.3.1",
    "transformers>=4.38",
    "huggingface_hub>=0.20",
    "psutil>=5.9",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/dawsonblock/MLX-RFSN-main"
Documentation = "https://github.com/dawsonblock/MLX-RFSN-main#readme"
Repository = "https://github.com/dawsonblock/MLX-RFSN-main"
Issues = "https://github.com/dawsonblock/MLX-RFSN-main/issues"

[project.scripts]
rfsn-server = "rfsn_v10.server.cli:main"
rfsn-bench = "benchmarks.kv_shootout:main"
rfsn-health = "rfsn_v10.server.cli:health_check"
rfsn-config-check = "rfsn_v10.server.cli:config_check"
rfsn-benchmark = "rfsn_v10.cli:main"

[tool.setuptools.packages.find]
include = ["rfsn_v10*", "rfsn_v11*", "agent_core*", "tools*", "benchmarks*", "memory*"]
exclude = ["external*", "turboquant*", "mlx-turboquant*", "vmlx*"]

[tool.setuptools.package-data]
"rfsn_v10" = ["*.metal", "*.npz", "*.json", "*.yaml", "*.yml"]
"rfsn_v11" = ["*.metal", "*.npz", "*.json", "*.yaml", "*.yml"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", "*.so", "*.dylib"]

[tool.setuptools_scm]
write_to = "rfsn_v10/_version.py"
version_scheme = "release-branch-semver"
fallback_version = "10.1.0.dev0"

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests", "rfsn_v11/tests", "rfsn_v10/cache/tests", "rfsn_v10/integrations/mlx_lm_adapter/tests"]
timeout = 300
filterwarnings = [
    "ignore::DeprecationWarning:mlx",
    "ignore::UserWarning",
]
markers = [
    "unit: fast unit tests, no external deps",
    "integration: integration tests",
    "db: database tests (requires alembic/sqlalchemy)",
    "e2e: end-to-end tests (requires full stack)",
    "mlx: requires Apple Silicon + MLX",
    "slow: slow tests (>10s)",
    "security: security and privacy tests",
    "benchmark: benchmark tests (not for CI)",
    "experimental: experimental candidate tests",
    "server: server/API tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"rfsn_v10/runtime/__init__.py" = ["E402"]

[tool.ruff.format]
line-ending = "auto"

[tool.coverage.run]
source = ["rfsn_v10", "rfsn_v11"]
omit = [
    "*/tests/*",
    "*/test_*",
    "rfsn_v10/_version.py",
]

[tool.coverage.report]
fail_under = 60
skip_covered = false
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
