[build-system]
requires = ["setuptools>=70.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rfsn-v11"
version = "11.0.0a1"
description = "RFSN v11 - Asymmetric quantized KV-cache + decode-time sparse-attention runtime for MLX/Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "RFSN Contributors"},
]
keywords = [
    "quantization",
    "kv-cache",
    "sparse-attention",
    "mlx",
    "apple-silicon",
    "llm",
    "inference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==1.26.4",
    "requests>=2.31",
    "pydantic>=2.5",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
mlx = [
    "mlx==0.21.1",
    "mlx-lm>=0.19",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff==0.4.*",
    "mypy==1.8.*",
]
production = [
    "psutil>=5.9",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "rfsn-v11[mlx,dev,production]",
]

[tool.setuptools.packages.find]
# Deliberately excludes agent_core* and tools*
include = ["rfsn_v11*"]

[tool.setuptools.package-data]
# codebooks.npz must be bundled — load_codebook() raises FileNotFoundError otherwise
"rfsn_v11" = ["quant/data/codebooks.npz"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", "*.so", "*.dylib"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
timeout = 300
filterwarnings = [
    "ignore::DeprecationWarning:mlx",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
